--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -32,7 +32,7 @@
     "lint:quiet": "pnpm lint:js --quiet && pnpm lint:style --quiet",
     "lint:staged": "pnpm lint-staged",
     "supportedBrowsers": "echo \"export default $(browserslist-useragent-regexp --allowHigherVersions);\" > supportedBrowsers.js",
-    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc",
+    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc.ts",
     "prepare": "pnpm nuxt prepare"
   },
   "devDependencies": {
@@ -43,10 +43,8 @@
     "@dargmuesli/nuxt-cookie-control": "5.2.2",
     "@funken-studio/sitemap-nuxt-3": "4.0.4",
     "@graphql-codegen/cli": "3.2.2",
-    "@graphql-codegen/typescript": "3.0.2",
-    "@graphql-codegen/typescript-operations": "3.0.2",
-    "@graphql-codegen/typescript-urql-graphcache": "2.4.3",
-    "@graphql-codegen/typescript-vue-urql": "2.3.6",
+    "@graphql-codegen/client-preset": "2.1.1",
+    "@graphql-codegen/typescript-urql-graphcache": "2.4.4",
     "@graphql-codegen/urql-introspection": "2.2.1",
     "@http-util/status-i18n": "0.6.2",
     "@intlify/eslint-plugin-vue-i18n": "2.0.0",
@@ -68,8 +66,8 @@
     "@unhead/vue": "1.1.25",
     "@urql/core": "3.2.2",
     "@urql/devtools": "2.0.3",
-    "@urql/exchange-graphcache": "5.0.9",
-    "@urql/vue": "1.0.4",
+    "@urql/exchange-graphcache": "5.2.0",
+    "@urql/vue": "1.0.5",
     "@vuelidate/core": "2.0.1",
     "@vuelidate/validators": "2.0.1",
     "autoprefixer": "10.4.14",
