--- a/.dockerignore
+++ b/.dockerignore
@@ -1,30 +1,24 @@
-# Created by https://www.toptal.com/developers/gitignore/api/node
-# Edit at https://www.toptal.com/developers/gitignore?templates=node
-# UNUSED PROPERTIES REMOVED!
-
 # Dependency directories
-nuxt/node_modules/
+**/node_modules/
 
 # Nuxt.js build / generate output
 nuxt/.nuxt
 nuxt/.output
 
-# End of https://www.toptal.com/developers/gitignore/api/node
-
 # Git
-nuxt/**/!.gitkeep
+**/!.gitkeep
 
 # Environment variables
 **/.env
 
 # ESLint
-.eslintcache
+**/.eslintcache
 
 # Cypress
-nuxt/cypress/results
-nuxt/cypress/reports
-nuxt/cypress/screenshots
-nuxt/cypress/snapshots/actual
-nuxt/cypress/snapshots/diff
-nuxt/cypress/snapshots/result
-nuxt/cypress/videos
+**/cypress/results
+**/cypress/reports
+**/cypress/screenshots
+**/cypress/snapshots/actual
+**/cypress/snapshots/diff
+**/cypress/snapshots/result
+**/cypress/videos
