--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
     with:
-      CACHE_PATH: nuxt/pnpm-lock.yaml
+      CACHE_PATH: pnpm-lock.yaml
