--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -6,9 +6,8 @@
   "author": "Jonas Thelemann",
   "type": "module",
   "engines": {
-    "node": "18"
+    "node": "20"
   },
-  "packageManager": "pnpm@8.3.1",
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
@@ -50,7 +49,7 @@
     "@nuxtjs/color-mode": "3.2.0",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "@nuxtjs/html-validator": "1.2.5",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.9-27948515.3db6367",
+    "@nuxtjs/i18n": "8.0.0-beta.10",
     "@nuxtjs/robots": "3.0.0",
     "@nuxtjs/sitemap": "2.4.0",
     "@pinia/nuxt": "0.4.9",
