--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -45,7 +45,7 @@
     "@graphql-codegen/typescript-urql-graphcache": "2.4.5",
     "@graphql-codegen/urql-introspection": "2.2.1",
     "@http-util/status-i18n": "0.7.0",
-    "@intlify/eslint-plugin-vue-i18n": "2.0.0",
+    "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
     "@nuxtjs/color-mode": "3.3.0",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "@nuxtjs/html-validator": "1.5.2",
