--- a/src/package.json
+++ b/src/package.json
@@ -39,7 +39,6 @@
     "@axe-core/playwright": "4.7.3",
     "@babel/core": "7.22.9",
     "@dargmuesli/nuxt-cookie-control": "6.1.5",
-    "@funken-studio/sitemap-nuxt-3": "4.0.4",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/typescript-urql-graphcache": "2.4.5",
@@ -50,7 +49,6 @@
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "@nuxtjs/html-validator": "1.5.2",
     "@nuxtjs/i18n": "8.0.0-rc.1",
-    "@nuxtjs/robots": "3.0.0",
     "@pinia/nuxt": "0.4.11",
     "@playwright/test": "1.36.2",
     "@skjnldsv/vue-plyr": "7.3.1",
@@ -88,7 +86,7 @@
     "marked": "5.1.2",
     "moment": "2.29.4",
     "nuxt": "3.6.5",
-    "nuxt-schema-org": "2.2.0",
+    "nuxt-seo-kit-module": "2.0.0-beta.9",
     "pinia": "2.1.6",
     "postcss": "8.4.27",
     "postcss-html": "1.5.0",
