--- a/src/package.json
+++ b/src/package.json
@@ -9,96 +9,71 @@
     "node": "20"
   },
   "scripts": {
-    "dev": "nuxt dev",
     "build": "nuxt build",
-    "start": "PORT=3001 node .output/server/index.mjs",
-    "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
-    "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
-    "lint:ts": "nuxt typecheck",
-    "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
+    "dev": "nuxt dev",
+    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc.ts",
     "lint:fix": "pnpm lint:js --fix && pnpm lint:ts --fix && pnpm lint:style --fix",
+    "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:quiet": "pnpm lint:js --quiet && pnpm lint:style --quiet",
-    "lint:staged": "pnpm lint-staged",
+    "lint:staged": "lint-staged",
+    "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
+    "lint:ts": "nuxt typecheck",
+    "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
     "prepare": "nuxt prepare",
-    "test:e2e": "playwright test",
-    "test:e2e:dev": "cross-env NUXT_PUBLIC_IS_TESTING=1 WAIT_ON_TIMEOUT=100000 pnpm test:e2e",
-    "test:e2e:prod": "cross-env NUXT_PUBLIC_IS_TESTING=1 WAIT_ON_TIMEOUT=10000 NODE_ENV=production pnpm test:e2e",
-    "test:e2e:docker:build": "docker build -t test-e2e_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-e2e_base ..",
-    "test:e2e:docker:run": "docker run --rm -v \"$PWD/..:/srv/app\" -v \"$(pnpm store path):/srv/.pnpm-store\" test-e2e_base",
-    "test:e2e:docker:br": "pnpm test:e2e:docker:build && pnpm test:e2e:docker:run",
-    "test:e2e:docker:dev": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:dev",
-    "test:e2e:docker:dev:update": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:dev --update-snapshots",
-    "test:e2e:docker:prod": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:prod",
+    "start": "PORT=3001 node .output/server/index.mjs",
     "supportedBrowsers": "echo \"export default $(browserslist-useragent-regexp --allowHigherVersions);\" > supportedBrowsers.js",
-    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc.ts"
+    "test:e2e:dev": "cross-env NUXT_PUBLIC_IS_TESTING=1 WAIT_ON_TIMEOUT=100000 pnpm test:e2e",
+    "test:e2e:docker:br": "pnpm test:e2e:docker:build && pnpm test:e2e:docker:run",
+    "test:e2e:docker:build": "docker build -t test-e2e_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-e2e_base ..",
+    "test:e2e:docker:dev:update": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:dev --update-snapshots",
+    "test:e2e:docker:dev": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:dev",
+    "test:e2e:docker:prod": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:prod",
+    "test:e2e:docker:run": "docker run --rm -v \"$PWD/..:/srv/app\" -v \"$(pnpm store path):/srv/.pnpm-store\" test-e2e_base",
+    "test:e2e:prod": "cross-env NUXT_PUBLIC_IS_TESTING=1 WAIT_ON_TIMEOUT=10000 NODE_ENV=production pnpm test:e2e",
+    "test:e2e": "playwright test"
   },
   "devDependencies": {
-    "@aws-sdk/client-s3": "3.385.0",
-    "@aws-sdk/credential-providers": "3.385.0",
-    "@aws-sdk/s3-request-presigner": "3.385.0",
+    "@aws-sdk/client-s3": "3.395.0",
+    "@aws-sdk/credential-providers": "3.395.0",
+    "@aws-sdk/s3-request-presigner": "3.395.0",
     "@axe-core/playwright": "4.7.3",
-    "@dargmuesli/nuxt-cookie-control": "6.1.5",
+    "@dargmuesli/nuxt-vio": "3.0.0-beta.10",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/typescript-urql-graphcache": "2.4.5",
     "@graphql-codegen/urql-introspection": "2.2.1",
-    "@http-util/status-i18n": "0.7.0",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
-    "@nuxtjs/color-mode": "3.3.0",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
-    "@nuxtjs/html-validator": "1.5.2",
-    "@nuxtjs/i18n": "8.0.0-rc.2",
-    "@pinia/nuxt": "0.4.11",
-    "@playwright/test": "1.36.2",
+    "@playwright/test": "1.37.1",
     "@skjnldsv/vue-plyr": "7.3.1",
-    "@tailwindcss/forms": "0.5.4",
-    "@tailwindcss/typography": "0.5.9",
-    "@types/cookie": "0.5.1",
     "@types/lodash-es": "4.17.8",
     "@types/marked": "5.0.1",
-    "@types/node": "20.4.8",
-    "@urql/core": "4.1.1",
-    "@urql/devtools": "2.0.3",
-    "@urql/exchange-graphcache": "6.3.1",
-    "@urql/vue": "1.1.2",
-    "@vuelidate/core": "2.0.3",
-    "@vuelidate/validators": "2.0.3",
-    "autoprefixer": "10.4.14",
-    "clipboard": "2.0.11",
+    "@types/node": "20.5.1",
     "consola": "3.2.3",
-    "cookie": "0.5.0",
     "cross-env": "7.0.3",
-    "dayjs": "2.0.0-alpha.4",
     "defu": "6.1.2",
-    "eslint": "8.46.0",
+    "eslint": "8.47.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-compat": "4.1.4",
     "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-yml": "1.8.0",
-    "h3": "1.7.1",
-    "is-https": "4.0.0",
+    "h3": "1.8.0",
     "jose": "4.14.4",
-    "lint-staged": "13.2.3",
+    "lint-staged": "14.0.1",
     "lodash-es": "4.17.21",
-    "marked": "7.0.0",
+    "marked": "7.0.4",
     "nuxt": "3.6.5",
-    "nuxt-seo-kit-module": "2.0.0-beta.9",
     "pinia": "2.1.6",
-    "prettier": "3.0.1",
-    "prettier-plugin-tailwindcss": "0.4.1",
+    "prettier": "3.0.2",
+    "prettier-plugin-tailwindcss": "0.5.3",
     "pretty-bytes": "6.1.1",
-    "slugify": "1.6.6",
-    "stylelint": "15.10.2",
+    "stylelint": "15.10.3",
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-no-unsupported-browser-features": "7.0.0",
-    "sweetalert2": "11.7.20",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "vue": "3.3.4",
-    "vue-gtag": "2.0.1",
-    "vue-tsc": "1.8.8"
+    "vue": "3.3.4"
   },
   "peerDependencies": {
     "playwright-core": "1.36.2"
