--- a/.releaserc
+++ b/.releaserc
@@ -1,15 +1,34 @@
 {
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "preset": "conventionalcommits"
+      }
+    ],
+    [
+      "@semantic-release/release-notes-generator",
+      {
+        "preset": "conventionalcommits"
+      }
+    ],
     "@semantic-release/changelog",
-    ["@semantic-release/npm", {
-      "pkgRoot": "./src"
-    }],
+    [
+      "@semantic-release/npm",
+      {
+        "pkgRoot": "./src"
+      }
+    ],
     "@semantic-release/github",
-    ["@semantic-release/git", {
-      "assets": ["CHANGELOG.md", "./src/package.json"]
-    }]
+    [
+      "@semantic-release/git",
+      {
+        "assets": [
+          "CHANGELOG.md",
+          "./src/package.json"
+        ]
+      }
+    ]
   ],
   "tagFormat": "${version}"
 }
