--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,10 @@
-*
-!docker/
-!sqitch/
-!src/
+.git/
+node_modules/
 src/.nuxt/
+src/.output/
+src/dist/
 src/node_modules/
+src/tsts/e2e/report/
+src/tsts/e2e/results/
+src/.env
 src/.eslintcache
-!.npmrc
-!package.json
-!pnpm-lock.yaml
-!pnpm-workspace.yaml
