--- a/src/package.json
+++ b/src/package.json
@@ -9,34 +9,34 @@
     "node": "20"
   },
   "scripts": {
-    "build": "pnpm build:node",
+    "build": "pnpm run build:node",
     "build:node": "nuxt build",
     "build:static": "SITE_URL=http://localhost:3002 nuxt generate",
-    "dev": "pnpm start:dev",
-    "generate": "pnpm build:static",
-    "lint:fix": "pnpm lint:js --fix && pnpm lint:ts --fix && pnpm lint:style --fix",
+    "dev": "pnpm run start:dev",
+    "generate": "pnpm run build:static",
+    "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
     "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:staged": "lint-staged",
     "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:ts": "nuxt typecheck",
-    "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
+    "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
     "prepare": "nuxt prepare",
     "preview": "nuxt preview",
     "start:dev": "nuxt dev",
     "start:node": "node .output/server/index.mjs",
     "start:static": "serve .output/public",
-    "test:e2e:docker:br": "pnpm test:e2e:docker:build && pnpm test:e2e:docker:run",
+    "test:e2e:docker:br": "pnpm run test:e2e:docker:build && pnpm run test:e2e:docker:run",
     "test:e2e:docker:build": "docker build -t test-e2e_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-e2e_base ..",
     "test:e2e:docker:run": "docker run --rm -v \"$PWD/..:/srv/app\" -v \"$(pnpm store path):/srv/.pnpm-store\" test-e2e_base",
-    "test:e2e:docker:server:dev:update": "pnpm test:e2e:docker:server:dev --update-snapshots",
-    "test:e2e:docker:server:dev": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:server:dev",
-    "test:e2e:docker:server:node:update": "pnpm test:e2e:docker:server:node --update-snapshots",
-    "test:e2e:docker:server:node": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:server:node",
-    "test:e2e:docker:server:static:update": "pnpm test:e2e:docker:server:static --update-snapshots",
-    "test:e2e:docker:server:static": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:server:static",
-    "test:e2e:server:dev": "cross-env PORT=3000 SITE_URL=http://localhost:3000 VIO_SERVER=dev pnpm test:e2e",
-    "test:e2e:server:node": "cross-env NODE_ENV=production NUXT_PUBLIC_I18N_BASE_URL=http://localhost:3001 NUXT_PUBLIC_SITE_URL=http://localhost:3001 PORT=3001 VIO_SERVER=node pnpm test:e2e",
-    "test:e2e:server:static": "cross-env NODE_ENV=production PORT=3002 SITE_URL=http://localhost:3002 VIO_SERVER=static pnpm test:e2e",
+    "test:e2e:docker:server:dev:update": "pnpm run test:e2e:docker:server:dev --update-snapshots",
+    "test:e2e:docker:server:dev": "pnpm run test:e2e:docker:br pnpm --dir src run test:e2e:server:dev",
+    "test:e2e:docker:server:node:update": "pnpm run test:e2e:docker:server:node --update-snapshots",
+    "test:e2e:docker:server:node": "pnpm run test:e2e:docker:br pnpm --dir src run test:e2e:server:node",
+    "test:e2e:docker:server:static:update": "pnpm run test:e2e:docker:server:static --update-snapshots",
+    "test:e2e:docker:server:static": "pnpm run test:e2e:docker:br pnpm --dir src run test:e2e:server:static",
+    "test:e2e:server:dev": "cross-env PORT=3000 SITE_URL=http://localhost:3000 VIO_SERVER=dev pnpm run test:e2e",
+    "test:e2e:server:node": "cross-env NODE_ENV=production NUXT_PUBLIC_I18N_BASE_URL=http://localhost:3001 NUXT_PUBLIC_SITE_URL=http://localhost:3001 PORT=3001 VIO_SERVER=node pnpm run test:e2e",
+    "test:e2e:server:static": "cross-env NODE_ENV=production PORT=3002 SITE_URL=http://localhost:3002 VIO_SERVER=static pnpm run test:e2e",
     "test:e2e": "playwright test"
   },
   "devDependencies": {
