--- a/src/package.json
+++ b/src/package.json
@@ -44,13 +44,11 @@
     "@aws-sdk/credential-providers": "3.410.0",
     "@aws-sdk/s3-request-presigner": "3.410.0",
     "@axe-core/playwright": "4.7.3",
-    "@dargmuesli/nuxt-vio": "4.0.2",
+    "@dargmuesli/nuxt-vio": "4.0.3",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/typescript-urql-graphcache": "2.4.5",
     "@graphql-codegen/urql-introspection": "2.2.1",
-    "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
-    "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@playwright/test": "1.37.1",
     "@skjnldsv/vue-plyr": "7.3.1",
     "@types/lodash-es": "4.17.9",
@@ -58,27 +56,11 @@
     "@types/node": "20.6.0",
     "consola": "3.2.3",
     "defu": "6.1.2",
-    "eslint": "8.49.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-compat": "4.2.0",
-    "eslint-plugin-nuxt": "4.0.0",
-    "eslint-plugin-prettier": "5.0.0",
-    "eslint-plugin-yml": "1.9.0",
     "h3": "1.8.1",
-    "lint-staged": "14.0.1",
     "lodash-es": "4.17.21",
     "marked": "9.0.0",
-    "nuxt": "3.7.2",
     "pinia": "2.1.6",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4",
-    "pretty-bytes": "6.1.1",
-    "stylelint": "15.10.3",
-    "stylelint-config-recommended-vue": "1.5.0",
-    "stylelint-config-standard": "34.0.0",
-    "stylelint-no-unsupported-browser-features": "7.0.0",
-    "tailwindcss": "3.3.3",
-    "vue": "3.3.4"
+    "pretty-bytes": "6.1.1"
   },
   "peerDependencies": {
     "playwright-core": "1.37.1"
