--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "pnpm run build:node",
     "build:node": "nuxt build",
-    "build:static": "SITE_URL=http://localhost:3002 nuxt generate",
+    "build:static": "nuxt generate",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
     "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
