--- a/src/package.json
+++ b/src/package.json
@@ -49,10 +49,12 @@
     "@graphql-codegen/typescript-urql-graphcache": "2.4.5",
     "@graphql-codegen/urql-introspection": "2.2.1",
     "@skjnldsv/vue-plyr": "7.3.1",
+    "@types/html-to-text": "9.0.1",
     "@types/marked": "5.0.1",
     "consola": "3.2.3",
     "defu": "6.1.2",
     "h3": "1.8.1",
+    "html-to-text": "9.0.5",
     "marked": "9.0.0",
     "pretty-bytes": "6.1.1"
   }
