--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
   release_semantic_dry:
     needs: prepare_jobs
     name: Release (semantic, dry)
-    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@0.43.5
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@1.0.0-beta.8
     if: needs.prepare_jobs.outputs.pr_found == 'false' || github.event_name == 'pull_request'
     permissions:
       contents: write
@@ -35,17 +35,17 @@ jobs:
       DRY_RUN: true
   build:
     name: Build
-    uses: dargmuesli/github-actions/.github/workflows/docker.yml@0.43.5
+    uses: dargmuesli/github-actions/.github/workflows/docker.yml@1.0.0-beta.8
     needs: release_semantic_dry
     permissions:
       packages: write
     with:
-      BUILD_TARGET: build-node
+      BUILD_TARGET_RELEASE: build-node
       TAG: ${{ needs.release_semantic_dry.outputs.new_release_version }}
   release_semantic:
     needs: build
     name: Release (semantic)
-    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@0.43.5
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@1.0.0-beta.8
     permissions:
       contents: write
     secrets:
