--- a/.github/workflows/release-schedule.yml
+++ b/.github/workflows/release-schedule.yml
@@ -1,13 +1,13 @@
-name: 'Release: Scheduled'
+name: "Release: Scheduled"
 
 on:
   schedule:
-    - cron: '0 0 * * 4' # Every Thursday at 00:00 AM UTC on the default branch
+    - cron: "0 0 * * 4" # Every Thursday at 00:00 AM UTC on the default branch
   workflow_dispatch:
 
 jobs:
   release-schedule:
-    name: 'Release: Scheduled'
+    name: "Release: Scheduled"
     uses: dargmuesli/github-actions/.github/workflows/release-schedule.yml@1.2.0
     secrets:
       PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
