--- a/src/package.json
+++ b/src/package.json
@@ -75,6 +75,7 @@
     "lint-staged": "15.0.2",
     "lodash-es": "4.17.21",
     "marked": "9.1.2",
+    "nitropack": "2.7.0",
     "nuxt": "3.8.0",
     "ofetch": "1.3.3",
     "playwright-core": "1.39.0",
