--- a/src/package.json
+++ b/src/package.json
@@ -41,24 +41,21 @@
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "3.441.0",
-    "@aws-sdk/credential-providers": "3.441.0",
+    "@aws-sdk/credential-providers": "3.444.0",
     "@aws-sdk/s3-request-presigner": "3.441.0",
     "@axe-core/playwright": "4.8.1",
     "@dargmuesli/nuxt-cookie-control": "7.1.1",
-    "@dargmuesli/nuxt-vio": "8.4.3",
+    "@dargmuesli/nuxt-vio": "9.0.0-beta.4",
     "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/client-preset": "4.1.0",
-    "@graphql-codegen/typescript-urql-graphcache": "3.0.0",
-    "@graphql-codegen/urql-introspection": "3.0.0",
     "@graphql-typed-document-node/core": "3.2.0",
+    "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.4",
+    "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.5-28319130.4a511e8",
     "@nuxtjs/tailwindcss": "6.9.4",
     "@pinia/nuxt": "0.5.1",
     "@playwright/test": "1.39.0",
     "@skjnldsv/vue-plyr": "7.4.0",
-    "@types/html-to-text": "9.0.3",
     "@types/lodash-es": "4.17.10",
-    "@unhead/vue": "1.8.3",
     "@urql/core": "4.1.4",
     "@urql/devtools": "2.0.3",
     "@urql/exchange-graphcache": "6.3.3",
@@ -68,23 +65,30 @@
     "consola": "3.2.3",
     "cross-env": "7.0.3",
     "defu": "6.1.3",
+    "eslint": "8.53.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-compat": "4.2.0",
+    "eslint-plugin-nuxt": "4.0.0",
+    "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-yml": "1.10.0",
     "graphql": "16.8.1",
-    "h3": "1.8.2",
     "html-to-text": "9.0.5",
     "jiti": "1.21.0",
     "lint-staged": "15.0.2",
     "lodash-es": "4.17.21",
     "marked": "9.1.5",
-    "nitropack": "2.7.2",
-    "nuxt": "3.8.0",
-    "ofetch": "1.3.3",
+    "nuxt": "3.8.1",
     "playwright-core": "1.39.0",
     "plyr": "3.7.8",
+    "prettier-plugin-tailwindcss": "0.5.6",
     "pretty-bytes": "6.1.1",
+    "serve": "14.2.1",
     "stylelint": "15.11.0",
-    "tailwindcss": "3.3.5",
+    "stylelint-config-recommended-vue": "1.5.0",
+    "stylelint-config-standard": "34.0.0",
+    "stylelint-no-unsupported-browser-features": "7.0.0",
     "unhead": "1.8.3",
-    "vue": "3.3.7",
+    "vue": "3.3.8",
     "vue-router": "4.2.5",
     "vue-tsc": "1.8.22"
   }
