--- a/src/package.json
+++ b/src/package.json
@@ -58,6 +58,7 @@
     "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@nuxtjs/i18n": "8.0.0",
     "@nuxtjs/tailwindcss": "6.11.2",
+    "@nuxtjs/turnstile": "0.6.3",
     "@pinia/nuxt": "0.5.1",
     "@playwright/test": "1.41.1",
     "@skjnldsv/vue-plyr": "7.4.0",
