--- a/src/package.json
+++ b/src/package.json
@@ -46,7 +46,7 @@
     "@aws-sdk/credential-providers": "3.535.0",
     "@aws-sdk/s3-request-presigner": "3.536.0",
     "@axe-core/playwright": "4.8.5",
-    "@dargmuesli/nuxt-cookie-control": "7.4.0",
+    "@dargmuesli/nuxt-cookie-control": "8.0.0-beta.3",
     "@dargmuesli/nuxt-vio": "11.0.0",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.2.4",
