--- a/src/package.json
+++ b/src/package.json
@@ -84,6 +84,7 @@
     "prettier-plugin-tailwindcss": "0.5.14",
     "pretty-bytes": "6.1.1",
     "serve": "14.2.3",
+    "sharp": "0.33.4",
     "stylelint": "16.5.0",
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "36.0.0",
@@ -92,7 +93,6 @@
     "tailwindcss": "3.4.3",
     "unhead": "1.9.10",
     "vue": "3.4.27",
-    "vue-router": "4.3.2",
-    "vue-tsc": "2.0.19"
+    "vue-router": "4.3.2"
   }
 }
