--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
-    "husky": "9.0.11"
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/commit-analyzer": "13.0.0",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "10.0.6",
+    "@semantic-release/npm": "12.0.1",
+    "@semantic-release/release-notes-generator": "14.0.0",
+    "husky": "9.0.11",
+    "semantic-release": "24.0.0"
   },
   "engines": {
     "node": "20"
@@ -21,19 +28,12 @@
     "start:dev": "pnpm --dir src run start:dev",
     "start:node": "pnpm --dir src run start:node",
     "start:static": "pnpm --dir src run start:static",
-    "test:e2e": "pnpm --dir src run test:e2e",
-    "test:e2e:docker:br": "pnpm --dir src run test:e2e:docker:br",
-    "test:e2e:docker:build": "pnpm --dir src run test:e2e:docker:build",
-    "test:e2e:docker:run": "pnpm --dir src run test:e2e:docker:run",
-    "test:e2e:docker:server:dev": "pnpm --dir src run test:e2e:docker:server:dev",
-    "test:e2e:docker:server:dev:update": "pnpm --dir src run test:e2e:docker:server:dev:update",
-    "test:e2e:docker:server:node": "pnpm --dir src run test:e2e:docker:server:node",
-    "test:e2e:docker:server:node:update": "pnpm --dir src run test:e2e:docker:server:node:update",
-    "test:e2e:docker:server:static": "pnpm --dir src run test:e2e:docker:server:static",
-    "test:e2e:docker:server:static:update": "pnpm --dir src run test:e2e:docker:server:static:update",
-    "test:e2e:server:dev": "pnpm --dir src run test:e2e:server:dev",
-    "test:e2e:server:node": "pnpm --dir src run test:e2e:server:node",
-    "test:e2e:server:static": "pnpm --dir src run test:e2e:server:static"
+    "test:e2e:docker:server:dev:update": "pnpm --dir tests run test:e2e:docker:server:dev:update",
+    "test:e2e:docker:server:dev": "pnpm --dir tests run test:e2e:docker:server:dev",
+    "test:e2e:docker:server:node:update": "pnpm --dir tests run test:e2e:docker:server:node:update",
+    "test:e2e:docker:server:node": "pnpm --dir tests run test:e2e:docker:server:node",
+    "test:e2e:docker:server:static:update": "pnpm --dir tests run test:e2e:docker:server:static:update",
+    "test:e2e:docker:server:static": "pnpm --dir tests run test:e2e:docker:server:static"
   },
   "type": "module"
 }
