--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@semantic-release/npm": "12.0.1",
     "@semantic-release/release-notes-generator": "14.0.0",
     "husky": "9.0.11",
+    "lint-staged": "15.2.7",
     "semantic-release": "24.0.0"
   },
   "engines": {
