--- a/src/package.json
+++ b/src/package.json
@@ -14,8 +14,9 @@
     "@graphql-typed-document-node/core": "3.2.0",
     "@headlessui/vue": "1.7.22",
     "@heroicons/vue": "2.1.4",
+    "@nuxt/scripts": "0.5.1",
     "@nuxtjs/i18n": "8.3.0",
-    "@nuxtjs/turnstile": "0.8.0",
+    "@nuxtjs/turnstile": "0.9.0",
     "@pinia/nuxt": "0.5.1",
     "@skjnldsv/vue-plyr": "7.5.0",
     "@types/html-to-text": "9.0.4",
