--- a/src/package.json
+++ b/src/package.json
@@ -35,6 +35,7 @@
     "lodash-es": "4.17.21",
     "marked": "13.0.1",
     "nuxt": "3.12.2",
+    "nuxt-security": "2.0.0-rc.9",
     "plyr": "3.7.8",
     "prettier-plugin-tailwindcss": "0.6.5",
     "pretty-bytes": "6.1.1",
