--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
     "test:e2e:docker:server:static:update": "pnpm --dir tests run test:e2e:docker:server:static:update",
     "test:e2e:docker:server:static": "pnpm --dir tests run test:e2e:docker:server:static"
   },
-  "type": "module"
+  "type": "module",
+  "pnpm": {
+    "overrides": {
+      "typescript": "5.4.5"
+    }
+  }
 }
